# falcon-typing

./: .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  README.md  vcpkg.json
.github/workflows/: ci.yml
cmake/: falcon-typing-config.cmake.in
include/falcon-typing/: FFIHelpers.hpp  PrimitiveTypes.hpp  falcon_ffi.h
src/: PrimitiveTypes.cpp
tests/: CMakeLists.txt  test_primitive_types.cpp
